handbook/mirrors: Add Iranian mirror

--- a/documentation/content/en/books/handbook/mirrors/_index.adoc
+++ b/documentation/content/en/books/handbook/mirrors/_index.adoc
@@ -178,6 +178,10 @@ Mirror list maintained by the community and other companies:
 | ftp2.gr.FreeBSD.org
 | link:http://ftp2.gr.FreeBSD.org/pub/FreeBSD[http] link:http://ftp2.gr.FreeBSD.org/pub/FreeBSD[http_v6] link:ftp://ftp2.gr.FreeBSD.org/pub/FreeBSD[ftp] link:ftp://ftp2.gr.FreeBSD.org/pub/FreeBSD[ftp_v6] link:rsync://ftp2.gr.FreeBSD.org[rsync]
 
+| Iran icon:envelope[link=mailto:{mirrors-iran-email}, title="mirror contact"]
+| ftp.ir.FreeBSD.org
+| link:http://ftp.ir.freebsd.org/FreeBSD[http] link:http://ftp.ir.freebsd.org/FreeBSD[http_v6] link:ftp://ftp.ir.freebsd.org/FreeBSD[ftp] link:ftp://ftp.ir.freebsd.org/FreeBSD[ftp_v6] link:rsync://ftp.ir.freebsd.org/FreeBSD[rsync] link:rsync://ftp.ir.freebsd.org/FreeBSD[rsync_v6]
+
 | Japan icon:envelope[link=mailto:{mirrors-japan-email}, title="mirror contact"]
 | ftp.jp.FreeBSD.org
 | link:http://ftp.jp.FreeBSD.org/pub/FreeBSD[http] link:http://ftp.jp.FreeBSD.org/pub/FreeBSD[http_v6] link:ftp://ftp.jp.FreeBSD.org/pub/FreeBSD[ftp] link:ftp://ftp.jp.FreeBSD.org/pub/FreeBSD[ftp_v6] link:rsync://ftp.jp.FreeBSD.org[rsync] link:rsync://ftp.jp.FreeBSD.org[rsync_v6]
