internal/new-account: Mention new src commit bit is taken care by srcmgr
Reviewed by:	emaste, markj, jhb
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D49870

--- a/website/content/en/internal/new-account.adoc
+++ b/website/content/en/internal/new-account.adoc
@@ -20,12 +20,12 @@ For some guidelines on how the proposal itself should be written, please see lin
 
 Responsible party for this procedure is:
 
-* src -> core@
+* src -> srcmgr@
 * doc -> doceng@
 * ports -> portmgr@
 
-You will get ACK after the message is seen, and core@, doceng@ and portmgr@ will give you a response after voting is finished or when the timeout is hit.
-The timeout for core@ and portmgr@ is set to 7 days while for doceng@ it is 14 days, however, as indicated, this is just a worst case and team members may finish voting earlier.
+You will get ACK after the message is seen, and srcmgr@, doceng@ and portmgr@ will give you a response after voting is finished or when the timeout is hit.
+The timeout for srcmgr@ and portmgr@ is set to 7 days while for doceng@ it is 14 days, however, as indicated, this is just a worst case and team members may finish voting earlier.
 
 == Authorizing A New Account
 
@@ -34,13 +34,12 @@ This email should include a link to this document so the mentor/mentee know what
 
 New account approvals are only valid from these PGP entities:
 
-* core-secretary (for src commit bits)
+* srcmgr-secretary (for src commit bits)
 * portmgr-secretary (for ports commit bits)
 * doceng-secretary (for doc commit bits)
 
 _NOTE: New account requests from anyone other than these entities or requests signed with PGP keys other than from these entities will not be acted upon.
-No exceptions.
-In case of a new ports or doc committer the account request email should be CC:-ed to core._
+No exceptions._
 
 == Information Needed From The Mentor
 
@@ -55,7 +54,7 @@ The person assigned as the new committers' mentor needs to collect and send the 
 The mentor is responsible for obtaining this information from the new committer in a secure fashion, and providing it to accounts@ in a secure fashion.
 PGP-signed email, with the mentor's public key already committed to the Handbook, is the preferred method for the mentor to send the information to accounts@.
 If this is impossible for some reason an acceptable substitute is for the mentor to place the account information in their home directory on freefall and then tell accounts@ where to find it.
-We need to be sure the account information really is coming from the Mentor and unsigned email is not sufficient for this these days. 
+We need to be sure the account information really is coming from the Mentor and unsigned email is not sufficient for this.
 Since accounts@ has no way to verify anything from the new Committer this information needs to be sent to accounts@ by the Mentor, not the new Committer.
 
 == accounts@ Creates New Account
@@ -78,7 +77,7 @@ Reading the link:{committers-guide}[Committer's Guide] is considered a good firs
 == End Of Mentorship
 
 There is no pre-set duration for a mentorship.
-Once the mentor feels the mentee is ready to 'fly solo' the mentor notifies the developer community by removing the entry from the `mentors` file in Git.
+Once the mentor feels the mentee is ready to 'fly solo' the mentor notifies the developer community by removing the entry from the `mentors` file of the `internal/admin` branch in the Git repository.
 
 == Transfer Of Mentorship
 
