administration: Add srcmgr
Sponsored by:	The FreeBSD Foundation

--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -34,6 +34,7 @@ This page lists teams, groups and individuals within the FreeBSD project with de
 ** <<t-core-secretary, Core Team Secretary>>
 ** <<t-doceng-secretary, Documentation Engineering Team Secretary>>
 ** <<t-portmgr-secretary, Ports Management Team Secretary>>
+** <<t-srcmgr-secretary, Source Management Team Secretary>>
 * Internal Administration
 ** <<t-accounts, Accounts Team>>
 ** <<t-backups, Backup Administrators>>
@@ -60,7 +61,7 @@ The Core Team is elected by the active developers in the project.
 
 * {allanjude} (Security Team Liaison)
 * {dch} (Release Engineering Team Liaison)
-* {glebius} (Bugmeister Team Liaison)
+* {glebius} (Bugmeister Team and Source Management Team Liaison)
 * {hrs} (Foundation Liaison)
 * {lwhsu} (Documentation Engineering Team Liaison)
 * {mat} (Cluster Administrators Team Liaison)
