HW Relnotes: Sync hardware notes from puc(4)
Add the ure driver to the Ethernet Interfaces section of the
Hardware Release Notes for the template and the upcoming 14.3R.

Reviewed by:	mhorne, ziaee
Approved by:	mhorne (mentor)
Discussed with:	bsdimp, cperciva
Pull Request:	https://github.com/freebsd/freebsd-doc/pull/486

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -648,30 +648,7 @@ Marvell 88W8363 IEEE 802.11n wireless network adapters (man:mwl[4] driver)
 
 [i386] STB 4 port card using shared IRQ
 
-[amd64, i386] PCI-Based multi-port serial boards (man:puc[4] driver)
-
-* [amd64, i386] Actiontech 56K PCI
-* [amd64, i386] Avlab Technology, PCI IO 2S and PCI IO 4S
-* [amd64, i386] Comtrol RocketPort 550
-* [amd64, i386] Decision Computers PCCOM 4-port serial and dual port RS232/422/485
-* [amd64, i386] Dolphin Peripherals 4025/4035/4036
-* [amd64, i386] IC Book Labs Dreadnought 16x Lite and Pro
-* [amd64, i386] Lava Computers 2SP-PCI/DSerial-PCI/Quattro-PCI/Octopus-550
-* [amd64, i386] Middle Digital, Weasle serial port
-* [amd64, i386] Moxa Industio CP-114, Smartio C104H-PCI and C168H/PCI
-* [amd64, i386] NEC PK-UG-X001 and PK-UG-X008
-* [amd64, i386] Netmos NM9835 PCI-2S-550
-* [amd64, i386] Oxford Semiconductor OX16PCI954 PCI UART
-* [amd64, i386] Syba Tech SD-LAB PCI-4S2P-550-ECP
-* [amd64, i386] SIIG Cyber I/O PCI 16C550/16C650/16C850
-* [amd64, i386] SIIG Cyber 2P1S PCI 16C550/16C650/16C850
-* [amd64, i386] SIIG Cyber 2S1P PCI 16C550/16C650/16C850
-* [amd64, i386] SIIG Cyber 4S PCI 16C550/16C650/16C850
-* [amd64, i386] SIIG Cyber Serial (Single and Dual) PCI 16C550/16C650/16C850
-* [amd64, i386] Syba Tech Ltd. PCI-4S2P-550-ECP
-* [amd64, i386] Titan PCI-200H and PCI-800H
-* [amd64, i386] US Robotics (3Com) 3CP5609 modem
-* [amd64, i386] VScom PCI-400 and PCI-800
+&hwlist.puc;
 
 &hwlist.rc;
 
