handbook: reference xwayland, not xwayland-devel
xwayland-devel was removed in ports commit a71eaeb3e54e
("x11-servers/xwayland-devel: remove until enough upstream changes
accumulate").

Reviewed by:	emaste
Sponsored by:	The FreeBSD Foundation
Differential Revision: https://reviews.freebsd.org/D49964

--- a/documentation/content/en/books/handbook/wayland/_index.adoc
+++ b/documentation/content/en/books/handbook/wayland/_index.adoc
@@ -461,7 +461,7 @@ If the [.filename]#/usr/local/bin/Xwayland# file does not exist, install it usin
 
 [source,shell]
 ----
-# pkg install xwayland-devel
+# pkg install xwayland
 ----
 
 [NOTE]
