Handbook/networking: Add default configuration to wireless setup
This is necessary for users to effectively disable, debug, and manage their wireless network connections with wpa_cli. These parameters are already present in the example configuration files (located: /usr/share/examples/etc/wpa_supplicant.conf), suggesting they are commonly used and beneficial for a standard setup. Including them in the handbook's basic example will provide a more robust and user-friendly default configuration for wireless networking.

PR:		286187
Reported by:	Creighton Chingarande <hello@chingarande.com>
Discussed with:	ziaee in Community Discord

--- a/documentation/content/en/books/handbook/network/_index.adoc
+++ b/documentation/content/en/books/handbook/network/_index.adoc
@@ -584,10 +584,15 @@ This procedure shows the steps required:
 
 * The first step will be to obtain the SSID (Service Set Identifier) and PSK (Pre-Shared Key) for the wireless network from the network administrator.
 
-* The second step will be to add an entry for this network to [.filename]#/etc/wpa_supplicant.conf#. If the file does not exist, create it:
+* The second step will be to add default configuration paramaters and an entry for this network to [.filename]#/etc/wpa_supplicant.conf#. If the file does not exist, create it:
 
 [.programlisting]
 ....
+ctrl_interface=/var/run/wpa_supplicant
+eapol_version=1
+ap_scan=1
+fast_reauth=1
+
 network={
  ssid="myssid" <.>
  psk="mypsk" <.>
