status: Remove contraction in 2025q1 FreeBSD Foundation report entry

--- a/website/content/en/status/report-2025-01-2025-03/freebsd-foundation.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/freebsd-foundation.adoc
@@ -45,7 +45,7 @@ In the first quarter of 2025, the Foundation continued its work to support and p
 In addition to our regular activities such as publishing educational and informational content, attending events, and providing travel grants to help FreeBSD contributors participate in conferences we also welcomed a new team member.
 Mark Phillips joined us in March as our Technical Marketing Manager.
 With a background in engineering and a passion for storytelling, Mark describes himself as "an engineer by training, a marketer by chance."
-He has already made connections within the FreeBSD community, and we're excited to see his impact grow.
+He has already made connections within the FreeBSD community, and we are excited to see his impact grow.
 To learn more about Mark, visit our link:https://freebsdfoundation.org/about-us/our-team/[team page].
 
 Other highlights of our Q1 2025 advocacy efforts include:
