bugmeister.adoc: typo fixed

--- a/website/content/en/status/report-2025-01-2025-03/bugmeister.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/bugmeister.adoc
@@ -29,7 +29,7 @@ Bugmeister folks also did some passes through the database to clean up metadata:
 
 - obsoleted many stale patches where more than one patch was in the PR.
 
-The "automate harvesting PRs and evalauting whether they still apply" task has resulted in the release of link:https://github.com/linimon/patchQA[patchQA.py] as beta.
+The "automate harvesting PRs and evaluating whether they still apply" task has resulted in the release of link:https://github.com/linimon/patchQA[patchQA.py] as beta.
 The program can take either a number (as a single PR number), or, with some work, a full REST query.
 
 The main current problem is that the py-patch algorithm does not correctly handle fuzz.
