add Voosk with some package

--- a/website/content/en/status/report-2025-01-2025-03/cfc.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/cfc.adoc
@@ -10,7 +10,8 @@ Links: +
 link:https://github.com/FreeBSD-Ask/FreeBSD-Ask[FreeBSD-Ask on GitHub] URL: link:https://github.com/FreeBSD-Ask/FreeBSD-Ask[] +
 link:https://book.bsdcn.org/[FreeBSD-Ask on Website] URL: link:https://book.bsdcn.org/[]
 
-Contact: ykla <yklaxds@gmail.com>
+Contact: ykla <yklaxds@gmail.com> +
+Contact: Voosk <roisfrank@icloud.com>
 
 *FreeBSD-Ask* is an open-source FreeBSD introductory guide written in Simplified Chinese, initiated by ykla from the Chinese FreeBSD Community (CFC).
 *FreeBSD-Ask* was established on March 14, 2021.
@@ -22,19 +23,19 @@ Updates in this quarter:
   * package:sysutils/bsdconfig[] System Configuration Tool
   * Installing package:x11-wm/fluxbox[]
   * Installing package:x11-wm/icewm[]
-  * Prometheus Monitoring Deployment
+  * Installing package:net-mgmt/prometheus2[]
   * package:security/py-fail2ban[] (Based on IPFW, PF, IPF)
   * Installing package:x11-wm/windowmaker[]
   * Manual Dual-Boot Installation (Installing FreeBSD First)
   * Installing FreeBSD - Based on Apple M1 & Parallels Desktop 20
   * Command Line Basics
-  * Zabbix Monitoring (Based on PostgreSQL)
+  * package:zabbix7-server[] (Based on PostgreSQL)
   * etc.
 
 * Rewritten:
-  * Pure-FTPd (Based on MySQL)
-  * ProFTPD (Based on MySQL)
-  * vsftpd
+  * Installing package:ftp/pure-ftpd[] (Based on MySQL)
+  * Installing package:ftp/proftpd[] (Based on MySQL)
+  * Installing package:ftp/vsftpd[]
 
 * Added several GitHub Actions, such as automatic PDF generation, dead link checking, etc.
 
