--- a/website/content/en/status/report-2025-01-2025-03/cfc.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/cfc.adoc
@@ -29,7 +29,7 @@ Updates in this quarter:
   * Manual Dual-Boot Installation (Installing FreeBSD First)
   * Installing FreeBSD - Based on Apple M1 & Parallels Desktop 20
   * Command Line Basics
-  * package:zabbix7-server[] (Based on PostgreSQL)
+  * Installing package:zabbix7-server[] (Based on PostgreSQL)
   * etc.
 
 * Rewritten:
