pt-br/articles/mailing-list-faq: Sync with en 90a1c09

--- a/documentation/content/pt-br/articles/mailing-list-faq/_index.adoc
+++ b/documentation/content/pt-br/articles/mailing-list-faq/_index.adoc
@@ -71,7 +71,7 @@ Novamente, isto dependerá das regras de cada lista. Por favor leia o objetivo d
 
 Se após ler as listas acima você ainda não souber para qual delas enviar a sua pergunta, provavelmente você deverá postar na lista freebsd-questions (mas antes, veja abaixo).
 
-Note também que as listas de discussão tradicionalmente tem estado abertas para postagens de não assinantes. Isto foi uma escolha deliberada, para fazer com o engajamento na comunidade FreeBSD seja um processo mais simples, e para encorajar o compartilhamento aberto de ideias. Entretanto, devido ao abuso de alguns indivíduos, algumas listas possuem agora políticas em os posts de não assinantes devem ser aprovados manualmente para ter certeza de que são apropriados.
+Note that you must subscribe to a mailing list before you can post. You can elect to subscribe without receiving messages posted to the mailing list.
 
 === Como posso me inscrever?
 
@@ -85,7 +85,7 @@ Por favor não envie mensagens de cancelamento de inscrição diretamente para a
 
 === O histórico da listas está disponível?
 
-Sim. Os históricos das mensagens, agrupadas por tópicos de conversa, estão disponíveis link:https://docs.FreeBSD.org/mail/[aqui]. Você também pode acessar o https://lists.freebsd.org/pipermail[arquivo mailman] e o link:https://lists.freebsd.org/archives[arquivo mlmmj] diretamente.
+Sim. Os históricos das mensagens desde 1994, agrupadas por tópicos de conversa, estão disponíveis link:https://mail-archive.freebsd.org/mail/[aqui]. Você também pode acessar o https://lists.freebsd.org/pipermail[arquivo mailman] e o link:https://lists.freebsd.org/archives[arquivo mlmmj] diretamente.
 
 === As listas de discussão estão disponíveis em um formato sumarizado (digest)?
 
@@ -164,7 +164,7 @@ Não há dúvida de que os arquivos são bastante extensos e algumas questões r
 
 Literalmente, uma `bikeshed` é um pequeno abrigo ao ar livre no qual se pode armazenar o meio de transporte de duas rodas. No entanto, no jargão do FreeBSD, o termo refere-se a tópicos que são simples o suficiente para que (quase) qualquer um possa opinar sobre ele, e geralmente (quase) todos o fazem. A gênese desse termo é explicada com mais detalhes extref:{faq}[neste documento]. Você simplesmente deve ter um conhecimento prático deste conceito antes de postar em qualquer lista de discussão do FreeBSD.
 
-Mais genericamente, um Bikeshed é um tópico que tenderá a gerar Meta-discussões imediatas e interações hostis com usuários você ainda nem conhece.
+De forma mais geral, um bikeshed é um tema que tende a gerar debates paralelos e polêmicas imediatas se você não conhecer seu histórico.
 
 Por favor, ajude-nos a manter as listas de discussão úteis para o maior numero possível de pessoas evitando bikesheds sempre que puder. Obrigado.
 
