--- a/website/content/en/releases/14.3R/hardware.adoc
+++ b/website/content/en/releases/14.3R/hardware.adoc
@@ -3,7 +3,7 @@ title: FreeBSD 14.3 Hardware Notes
 sidenav: download
 ---
 
-:localRel: X.Y
+:localRel: 14.3
 :doctype: article
 :toc: macro
 :toclevels: 2
@@ -849,49 +849,21 @@ controllers.
 
 
 
-Cards supported by the
+The
 **isp**
-driver include:
+driver supports the following optical Fibre Chanel adapters:
 
-Qlogic 2422
-
-> Optical 4Gb Fibre Channel PCI-X cards.
-
-Qlogic 246x (aka 2432)
-
-> Optical 4Gb Fibre Channel PCIe cards.
-
-Qlogic 256x (aka 2532)
-
-> Optical 8Gb Fibre Channel PCIe cards.
-
-Qlogic 267x/836x (aka 2031/8031)
-
-> Optical 16Gb FC/FCoE PCIe cards.
-
-Qlogic 2690/2692/2694 (aka 2684/2692)
-
-> Optical 16Gb Fibre Channel PCIe cards.
-
-Qlogic 2740/2742/2764 (aka 2722/2714)
-
-> Optical 32Gb Fibre Channel PCIe cards.
-
-Qlogic QLE2770/QLE2772 (aka 2812)
-
-> Optical 32Gb Fibre Channel PCIe cards.
-
-Qlogic QLE2774 (aka 2814)
-
-> Optical 32Gb Fibre Channel PCIe cards.
-
-Qlogic QLE2870/QLE2872 (aka 2812)
-
-> Optical 64Gb Fibre Channel PCIe cards.
-
-Qlogic QLE2874 (aka 2814)
-
-> Optical 64Gb Fibre Channel PCIe cards.
+	Model:                               Speed:   Bus:  
+	Qlogic QLE2874 (2814)                64Gb     PCIe  
+	Qlogic QLE2870/QLE2872 (2812)        64Gb     PCIe  
+	Qlogic QLE2774 (2814)                32Gb     PCIe  
+	Qlogic QLE2770/QLE2772 (2812)        32Gb     PCIe  
+	Qlogic 2740/2742/2764 (2722/2714)    32Gb     PCIe  
+	Qlogic 2690/2692/2694 (2684/2692)    16Gb     PCIe  
+	Qlogic 267x/836x (2031/8031) FCoE    16Gb     PCIe  
+	Qlogic 256x (2532)                   8Gb      PCIe  
+	Qlogic 246x (2432)                   4Gb      PCIe  
+	Qlogic 2422                          4Gb      PCI-X
 
 
 
@@ -3990,27 +3962,18 @@ driver supports all UHCI v1.1 compliant controllers including:
 
 The
 **uipaq**
-driver supports the following adapters:
+driver supports the following iPAQ devices:
 
-ASUS P535 PDA
-
-Casio BE300 PDA
-
-Compaq IPaq PocketPC
-
-HP Jornada 568
-
-HP iPAQ 22xx/Jornada 548
-
-HTC PPC6700 Modem
-
-HTC Smart Phone
-
-HTC Winmobile
-
-Sharp W-ZERO3 ES Spart Phone
-
-Most Windows CE based phones
+*	ASUS P535 PDA
+*	Casio BE300 PDA
+*	Compaq IPaq PocketPC
+*	HP Jornada 568
+*	HP iPAQ 22xx/Jornada 548
+*	HTC PPC6700 Modem
+*	HTC Smart Phone
+*	HTC Winmobile
+*	Sharp W-ZERO3 ES Spart Phone
+*	Most Windows CE based phones
 
 
 [amd64, i386] USB 2.0 controllers using the EHCI interface (man:ehci[4] driver)
