pt-br/articles/mailing-list-faq: Sync with en f85add5

--- a/documentation/content/pt-br/articles/mailing-list-faq/_index.adoc
+++ b/documentation/content/pt-br/articles/mailing-list-faq/_index.adoc
@@ -71,7 +71,7 @@ Novamente, isto dependerá das regras de cada lista. Por favor leia o objetivo d
 
 Se após ler as listas acima você ainda não souber para qual delas enviar a sua pergunta, provavelmente você deverá postar na lista freebsd-questions (mas antes, veja abaixo).
 
-Note that you must subscribe to a mailing list before you can post. You can elect to subscribe without receiving messages posted to the mailing list.
+Observe que é necessário se inscrever na lista de discussão antes de poder enviar mensagens. Você pode optar por se inscrever sem receber as mensagens enviadas para a lista.
 
 === Como posso me inscrever?
 
