--- a/documentation/content/pt-br/articles/mailing-list-faq/_index.po
+++ b/documentation/content/pt-br/articles/mailing-list-faq/_index.po
@@ -7,8 +7,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 21:59+0100\n"
-"PO-Revision-Date: 2025-05-01 20:50+0000\n"
+"POT-Creation-Date: 2025-05-01 19:57-0300\n"
+"PO-Revision-Date: 2025-05-02 09:44+0000\n"
 "Last-Translator: Edson Brandi <ebrandi@freebsd.org>\n"
 "Language-Team: Portuguese (Brazil) <https://translate-dev.freebsd.org/"
 "projects/documentation/articlesmailing-list-faq_index/pt_BR/>\n"
@@ -172,6 +172,9 @@ msgid ""
 "Note that you must subscribe to a mailing list before you can post.  You can "
 "elect to subscribe without receiving messages posted to the mailing list."
 msgstr ""
+"Observe que é necessário se inscrever na lista de discussão antes de poder "
+"enviar mensagens. Você pode optar por se inscrever sem receber as mensagens "
+"enviadas para a lista."
 
 #. type: Title ===
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:87
@@ -551,8 +554,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:164
 msgid ""
-"This is especially important for postings of the type \"yes, I see this "
-"too\", where the initial posting was dozens or hundreds of lines."
+"This is especially important for postings of the type \"yes, I see this too"
+"\", where the initial posting was dozens or hundreds of lines."
 msgstr ""
 "Isso é especialmente importante para postagens do tipo \"sim, também vejo "
 "isso\", em que a postagem inicial era de dezenas ou centenas de linhas."
