HW Relnotes: Add iwx(4) to Wireless Networks
The iwx driver was added in in src:1ad0f7e91582dd (Import iwx) for
FreeBSD 15. Add it to the hardware release notes template.

Reviewed by:		mhorne
Approved by:		mhorne (mentor)
Differential Revision:	https://reviews.freebsd.org/D50119

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -545,6 +545,8 @@ Ethernet driver for Google Virtual NIC (gVNIC) (man:gve[4] driver)
 
 &hwlist.iwn;
 
+&hwlist.iwx;
+
 &hwlist.malo;
 
 Marvell 88W8363 IEEE 802.11n wireless network adapters (man:mwl[4] driver)
