Document __FreeBSD_version 1500038 to 1500040
Sponsored by:	The FreeBSD Foundation

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -221,6 +221,21 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |April 12, 2025
 |15.0-CURRENT after changing alloc changes to LinuxKPI.
 
+|1500038
+|gitref:[repository="src",length=12]
+|April 19, 2025
+|15.0-CURRENT after removal of vm_page_next() and _prev.
+
+|1500039
+|gitref:[repository="src",length=12]
+|May 4, 2025
+|15.0-CURRENT after introducing a properly typed jiffies.
+
+|1500040
+|gitref:[repository="src",length=12]
+|May 4, 2025
+|15.0-CURRENT after the internal API between the nfscommon and nfscl modules changed.
+
 |===
 
 [[versions-14]]
