--- a/website/content/en/status/report-2025-01-2025-03/openjdk.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/openjdk.adoc
@@ -14,7 +14,7 @@ Java is an important runtime environment for many high performance, critical ent
 Making sure Java based applications run correctly and efficiently on FreeBSD is important to ensure that FreeBSD will continue to be a viable and attractive platform for enterprises, as well as businesses and organizations of all sizes.
 
 We released https://cgit.freebsd.org/ports/commit/?id=aa17c509fe7c4a011e832bd1e67257cf5d0ebc81[a port for OpenJDK 23] for FreeBSD at the very end of last year, and have since then fixed https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=284503[issues with font management] and some other minor improvements.
-We have also been following the development of OpenJDK 24 closely, and are just finishing a https://reviews.freebsd.org/D49354[port for it] that that should be available by the time this status update is published.
+We have also been following the development of OpenJDK 24 closely, and are just finishing a https://reviews.freebsd.org/D49354[port for it] that should be available by the time this status update is published.
 
 In parallel with porting OpenJDK 24 work has been ongoing on moving the BSD port also to the mainline OpenJDK development tree, and the first patches have been accepted upstream.
 Currently the focus is on reviving the https://openjdk.org/projects/bsd-port/[OpenJDK BSD port project], as well as getting a separate project repository set up under it.
