handbook/x11: Use package:[] syntax for NVIDIA packages

--- a/documentation/content/en/books/handbook/x11/_index.adoc
+++ b/documentation/content/en/books/handbook/x11/_index.adoc
@@ -248,26 +248,26 @@ Those with older cards will have to check below which version supports them.
 |===
 | Package | Supported hardware
 
-| x11/nvidia-driver-304
+| package:x11/nvidia-driver-304[]
 | link:https://www.nvidia.com/Download/driverResults.aspx/123712/en-us/[supported hardware]
 
-| x11/nvidia-driver-340
+| package:x11/nvidia-driver-340[]
 | link:https://www.nvidia.com/Download/driverResults.aspx/156167/en-us/[supported hardware]
 
-| x11/nvidia-driver-390
+| package:x11/nvidia-driver-390[]
 | link:https://www.nvidia.com/Download/driverResults.aspx/191122/en-us/[supported hardware]
 
-| x11/nvidia-driver-470
+| package:x11/nvidia-driver-470[]
 | link:https://www.nvidia.com/Download/driverResults.aspx/194639/en-us/[supported hardware]
 
-| x11/nvidia-driver
+| package:x11/nvidia-driver[]
 | link:https://www.nvidia.com/Download/driverResults.aspx/210651/en-us/[supported hardware]
 
 |===
 
 [WARNING]
 ====
-Version 304 of the NVIDIA(R) graphics driver (nvidia-driver-304) does not support xorg-server 1.20 or later.
+Version 304 of the NVIDIA(R) graphics driver (package:x11/nvidia-driver-304[]) does not support xorg-server 1.20 or later.
 ====
 
 The latest NVIDIA(R) driver can be installed by running the following command:
@@ -286,7 +286,7 @@ Then add the module to `/etc/rc.conf` file, executing the following command:
 
 [WARNING]
 ====
-The `nvidia` driver must be used if the packages x11/nvidia-driver-304 or x11/nvidia-driver-340 have been installed.
+The `nvidia` driver must be used if the packages package:x11/nvidia-driver-304[] or package:x11/nvidia-driver-340[] have been installed.
 
 [source,shell]
 ....
