handbook/cutting-edge: Fix a grammatical typo

--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -1155,7 +1155,7 @@ In that case, however, required environment variables need to be set manually (t
 Otherwise, the list of prerequisites for building FreeBSD is rather short.
 In fact, it boils down to installing a couple of dependencies.
 
-On macOS, the only dependency LLVM.
+On macOS, the only dependency is LLVM.
 The necessary dependencies can be installed with package manager (e.g., link:https://brew.sh/[Homebrew]):
 
 [source,shell]
