Move danger@ to develalumni

--- a/shared/contrib-develalumni.adoc
+++ b/shared/contrib-develalumni.adoc
@@ -391,6 +391,7 @@
 * {bbraun} (2001 - 2006)
 * {sf} (2000 - 2006)
 * {kiri} (2000 - 2006)
+* {danger} (2009 - 2025)
 * {dannyboy} (2000 - 2006)
 * {ben} (2000 - 2006)
 * {sheldonh} (1999 - 2006)
