Add new src committer information for kgalazka
Update committers list. Add PGP key, author entity
and news item.

Approved by: kbowling (mentor)
Differential Revision:	https://reviews.freebsd.org/D50243

--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -468,6 +468,9 @@ include::{include-path}grembo.key[]
 === `{sgalabov}`
 include::{include-path}sgalabov.key[]
 
+=== `{kgalazka}`
+include::{include-path}kgalazka.key[]
+
 === `{avg}`
 include::{include-path}avg.key[]
 
