--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -1867,6 +1867,10 @@
 :kevlo-email: kevlo@FreeBSD.org
 :kevlo: {kevlo-name} <{kevlo-email}>
 
+:kgalazka-name: Krzysztof Galazka
+:kgalazka-email: kgalazka@FreeBSD.org
+:kgalazka: {kgalazka-name} <{kgalazka-email}>
+
 :khng-name: Ka Ho Ng
 :khng-email: khng@FreeBSD.org
 :khng: {khng-name} <{khng-email}>
