--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -1506,6 +1506,9 @@ include::{include-path}bnovkov.key[]
 === `{ivy}`
 include::{include-path}ivy.key[]
 
+=== `{khorben}`
+include::{include-path}khorben.key[]
+
 [[pgpkeys-other]]
 == Other Cluster Account Holders
 
