--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -1871,6 +1871,10 @@
 :khng-email: khng@FreeBSD.org
 :khng: {khng-name} <{khng-email}>
 
+:khorben-name: Pierre Pronchery
+:khorben-email: khorben@FreeBSD.org
+:khorben: {khorben-name} <{khorben-email}>
+
 :kib-name: Konstantin Belousov
 :kib-email: kib@FreeBSD.org
 :kib: {kib-name} <{kib-email}>
