handbook/network-servers: Wordsmith the zerconf section

--- a/documentation/content/en/books/handbook/network-servers/_index.adoc
+++ b/documentation/content/en/books/handbook/network-servers/_index.adoc
@@ -2009,13 +2009,14 @@ FreeBSD does not provide authoritative name server software in the base system.
 Users are encouraged to install third party applications, like package:dns/nsd[] or package:dns/bind918[] package or port.
 
 [[network-zeroconf]]
-== Zero-configuration networking (mDNS/DNS-SD)
+== Zero-configuration Networking (mDNS/DNS-SD)
 
-https://en.wikipedia.org/wiki/Zero-configuration_networking[Zero-configuration networking] (sometimes referred to as zeroconf) is a set of technologies, which simplify network configuration by providing:
+https://en.wikipedia.org/wiki/Zero-configuration_networking[Zero-configuration networking] (sometimes referred to as _Zeroconf_) is a set of technologies, which simplify network configuration.
+The main parts of Zeroconf are:
 
-* automatic assignment of numeric network addresses (mDNS),
-* automatic distribution and resolution of hostnames (mDNS), and
-* automatic discovery of service instances (DNS-SD).
+- Link-Local Addressing providing automatic assignment of numeric network addresses.
+- Multicast DNS (_mDNS_) providing automatic distribution and resolution of hostnames.
+- DNS-Based Service Discovery (_DNS-SD_) providing automatic discovery of service instances.
 
 === Configuring and Starting Avahi
 
