stable/14 is now 14.3-STABLE
Update errata and advisory templates and download page.

Sponsored by:	Amazon

--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -83,6 +83,9 @@
 // more (in addition to cleaning up this file) following the 11.3
 // release (likely as part of the 11.3 announcement commit). -gjb
 
+:rel143-current-major: 14
+:rel143-current: 14.3
+
 :rel142-current-major: 14
 :rel142-current: 14.2
 :rel142-current-date: December 3, 2024
