--- a/website/content/en/releases/14.3R/schedule.adoc
+++ b/website/content/en/releases/14.3R/schedule.adoc
@@ -37,7 +37,7 @@ General discussions about the pending release and known issues should be sent to
 |Code slush begins |18 April 2025 |18 April 2025 |Release Engineers announce that all further commits to the {localBranchStable} branch will not require explicit approval, however new features should be avoided.
 |{localBranchReleng} branch |2 May 2025 |2 May 2025 |{localBranchReleng} branch created; future release engineering proceeds on this branch.
 |BETA1 builds begin |2 May 2025 |2 May 2025 |First beta test snapshot.
-|BETA2 builds begin |9 May 2025 |- |Second beta test snapshot.
+|BETA2 builds begin |9 May 2025 |9 May 2025 |Second beta test snapshot.
 |BETA3 builds begin |16 May 2025 |- |Third beta test snapshot.
 |RC1 builds begin |23 May 2025 |- |First release candidate.
 |RELEASE builds begin |30 May 2025 |- |{localRel}-RELEASE builds begin.
