Translated arch-handbool/vm/chapter.adoc to Russian

--- a/documentation/content/ru/books/arch-handbook/book.adoc
+++ b/documentation/content/ru/books/arch-handbook/book.adoc
@@ -1,8 +1,8 @@
 ---
 title: FreeBSD Architecture Handbook
-authors: 
+authors:
   - author: The FreeBSD Documentation Project
-copyright: 2000-2006, 2012-2013 The FreeBSD Documentation Project
+copyright: 2000-2006, 2012-2025 The FreeBSD Documentation Project
 description: FreeBSD Architecture Handbook
 trademarks: ["freebsd", "apple", "microsoft", "unix", "general"]
 tags: ["Arch Handbook", "FreeBSD"]
@@ -44,6 +44,14 @@ ifndef::env-beastie[]
 include::../../../../../shared/asciidoctor.adoc[]
 endif::[]
 
+[.abstract-title]
+
+Аннотация
+
+Добро пожаловать в Руководство по архитектуре FreeBSD. Этот документ является _незавершённой работой_ и создаётся усилиями множества участников. Многие разделы ещё не написаны, а некоторые из уже существующих нуждаются в обновлении. Если вы хотите принять участие в этом проекте, отправьте письмо на адрес {freebsd-doc}.
+
+Актуальная версия этого документа всегда доступна на сайте: link:https://www.FreeBSD.org/[FreeBSD World Wide Web server]. Также его можно загрузить в различных форматах и с различными вариантами сжатия с https://download.freebsd.org/doc/[FreeBSD download server] или с одного из многочисленных зеркал extref:{handbook}[mirror sites, mirrors].
+
 '''
 
 toc::[]
@@ -51,6 +59,7 @@ toc::[]
 // Section one
 
 include::{chapters-path}locking/chapter.adoc[leveloffset=+1]
+include::{chapters-path}vm/chapter.adoc[leveloffset=+1]
 
 // Section two
 
