Translations page, Russian project: removed or fixed broken links

--- a/website/content/en/docproj/translations.adoc
+++ b/website/content/en/docproj/translations.adoc
@@ -233,12 +233,9 @@ Handbook
 Documents available:
 
 * link:https://docs.freebsd.org/ru/books/faq/[FAQ]
-* link:https://www.freebsd.org/ru/[WWW]
-* link:http://www.freebsd.org.ua/docs.html[Other documents list]
-
-Documents currently being worked on:
-
-* link:http://www.freebsd.org.ua/doc/ru_RU.KOI8-R/books/handbook/[Handbook]
+* link:https://docs.freebsd.org/ru/[FreeBSD documentation]
+* link:https://docs.freebsd.org/ru/books/[Books]
+* link:https://docs.freebsd.org/ru/books/handbook/[Handbook]
 
 [[spanish]]
 == The FreeBSD Spanish Documentation Project
